# Compendium

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FRONTEND_IMPROVEMENT_PLAN.md  PRODUCT.md  README.en.md  README.md  cliff.toml  codecov.yml  compendium_improvement_directions.md  deploy.sh  docker-compose.yml  flake.nix  install.sh  mkdocs.yml  nginx-test.conf  nginx.conf  pdfium-linux-x64.tgz  requirements-docs.txt  typos.toml
pdf-module-rs/: .clippy.toml  .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.mcp  deny.toml  docker-compose.yml  extraction.plugins.toml  justfile  release-plz.toml  release.toml  rustfmt.toml  taplo.toml  test_mcp_requests2.txt  test_mcp_requests3.txt  test_mcp_tools.sh  test_save_wiki.txt
pdf-module-rs/.cargo-husky/hooks/: pre-commit  pre-push
pdf-module-rs/cargo-generate-template/: .dockerignore  .editorconfig  .gitignore.hbs  .pre-commit-config.yaml  Cargo.toml.hbs  Dockerfile.hbs  build.rs.hbs  cargo-generate.toml  clippy.toml  deny.toml  flake.nix.hbs  justfile.hbs  rustfmt.toml  typos.toml
pdf-module-rs/cargo-generate-template/.cargo-husky/hooks/: pre-commit  pre-push
pdf-module-rs/cargo-generate-template/.devcontainer/: devcontainer.json
pdf-module-rs/cargo-generate-template/.github/workflows/: ci.yml.hbs
pdf-module-rs/cargo-generate-template/benches/: benchmark.rs.hbs
pdf-module-rs/cargo-generate-template/examples/: basic.rs.hbs
pdf-module-rs/cargo-generate-template/migrations/: 20240101000000_initial_schema.sql
pdf-module-rs/cargo-generate-template/src/: cli.rs.hbs  config_loader.rs.hbs  crypto.rs.hbs  db.rs.hbs  error.rs.hbs  feature_flags.rs.hbs  lib.rs.hbs  main.rs.hbs  metrics.rs.hbs  models.rs.hbs  routes.rs.hbs  tracing_setup.rs.hbs
pdf-module-rs/cargo-generate-template/tests/: integration_test.rs.hbs
pdf-module-rs/crates/pdf-cli/: Cargo.toml
pdf-module-rs/crates/pdf-cli/src/: config.rs  local.rs  main.rs  output.rs  proxy.rs  remote.rs
pdf-module-rs/crates/pdf-cli/src/commands/: compile.rs  export.rs  import.rs  kb.rs  mod.rs  platform.rs  query.rs
pdf-module-rs/crates/pdf-common/: Cargo.toml
pdf-module-rs/crates/pdf-common/src/: auth.rs  config.rs  config_loader.rs  crypto.rs  db.rs  diagnostics.rs  dto.rs  error.rs  feature_flags.rs  i18n.rs  lib.rs  traits.rs
pdf-module-rs/crates/pdf-core/: Cargo.toml
pdf-module-rs/crates/pdf-core/benches/: extractor_bench.rs  profiling_bench.rs  validator_bench.rs
pdf-module-rs/crates/pdf-core/examples/: bench_validate.rs  test_dates.rs  test_level.rs  test_page.rs  test_parse.rs  validate_pdf.rs
pdf-module-rs/crates/pdf-core/fuzz/: Cargo.toml
pdf-module-rs/crates/pdf-core/fuzz/fuzz_targets/: dto_roundtrip_fuzz.rs  path_safety_fuzz.rs  validator_fuzz.rs
pdf-module-rs/crates/pdf-core/src/: config.rs  dhat_profiler.rs  dto.rs  error.rs  extractor.rs  lib.rs  mmap_loader.rs  quality_probe.rs  tracing_setup.rs  validator.rs  vlm_pipeline.rs  wiki.rs
pdf-module-rs/crates/pdf-core/src/cache/: lru_ttl.rs
pdf-module-rs/crates/pdf-core/src/engine/: pdfium.rs  trait.rs
pdf-module-rs/crates/pdf-core/src/extraction/: image_extractor.rs  mod.rs  plugin_sandbox.rs  remote.rs  vlm.rs
pdf-module-rs/crates/pdf-core/src/knowledge/: README.md  cache_db.rs  claim_extractor.rs  cognitive_diversity.rs  collab.rs  compile_pipeline.rs  compile_plan.rs  confidence_propagation.rs  engine.rs  entry.rs  export.rs  hash_cache.rs  hub_threshold.rs  import.rs  importance.rs  kb_init.rs  knowledge_decay.rs  markdown_contract.rs  mod.rs  patch.rs  publish_gate.rs  (+4 more)
pdf-module-rs/crates/pdf-core/tests/: integration_test.rs  snapshot_tests.rs
pdf-module-rs/crates/pdf-dashboard/src/: main.rs
pdf-module-rs/crates/pdf-frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
pdf-module-rs/crates/pdf-frontend/src/: api.rs  app.rs  i18n.rs  main.rs  theme.rs
pdf-module-rs/crates/pdf-frontend/styles/: input.css  output.css
pdf-module-rs/crates/pdf-macros/: Cargo.toml
pdf-module-rs/crates/pdf-macros/src/: lib.rs
pdf-module-rs/crates/pdf-mcp/: Cargo.toml  build.rs  mcp.json
pdf-module-rs/crates/pdf-mcp-contracts/: Cargo.toml
pdf-module-rs/crates/pdf-mcp-contracts/src/: code_mode.rs  common.rs  extract.rs  index.rs  knowledge.rs  lib.rs  management.rs  platform.rs  registry.rs  tool_exposure.rs
pdf-module-rs/crates/pdf-mcp-contracts/tests/: manifest.rs
pdf-module-rs/crates/pdf-mcp/pdf-web-ui/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js  vitest.setup.js
pdf-module-rs/crates/pdf-mcp/src/: api_doc.rs  embed.rs  http.rs  http_schemas.rs  lib.rs  main.rs  metrics.rs  server.rs  upload.rs
pdf-module-rs/crates/pdf-mcp/tests/: mcp_contracts.rs
pdf-module-rs/crates/pdf-wasm/: Cargo.toml
pdf-module-rs/crates/pdf-wasm/src/: arena.rs  error.rs  lib.rs  preview.rs  slice.rs
pdf-module-rs/crates/pdf-wasm/tests/: wasm_preview_tests.rs
pdf-module-rs/crates/pdf-web/: Cargo.toml
pdf-module-rs/crates/pdf-web/src/: main.rs
pdf-module-rs/crates/vlm-visual-gateway/: Cargo.toml
pdf-module-rs/crates/vlm-visual-gateway/src/: buffer.rs  gateway.rs  lib.rs  metrics.rs  pdfium_guard.rs  types.rs
pdf-module-rs/doc/: FEATURE_MATRIX.md  MCP_UI_EXTENSION.md  RELEASE_CHECKLIST.md
pdf-module-rs/doc/adr/: ADR-001-body-markdown-ssot.md  ADR-002-hybrid-search-rrf.md  ADR-003-index-cache.md  ADR-004-deprecate-pdf-web.md  ADR-005-collaboration-boundary.md  ADR-006-wiki-first-retrieval.md  README.md  adr-template.md
pdf-module-rs/examples/embed-vite/: index.html  main.js
pdf-module-rs/locales/en-US/: main.ftl
pdf-module-rs/locales/zh-CN/: main.ftl
pdf-module-rs/templates/knowledge_base/raw/: .gitkeep
pdf-module-rs/templates/knowledge_base/schema/: AGENTS.md  CLAUDE.md
pdf-module-rs/templates/knowledge_base/wiki/: index.md  log.md
pdf-module-rs/templates/sdk/: compendium-api-index.json  compendium.d.ts
pypi/: pyproject.toml
pypi/src/pdf_mcp/: __init__.py
(+190 files in other folders)
