[package]
name = "pdf-cli"
version.workspace = true
edition = "2024"
description = "Unified CLI for rsut-pdf-mcp knowledge engine — dual-mode (local/remote), file upload, knowledge management"
license = "MIT"

[[bin]]
name = "pdf-cli"
path = "src/main.rs"

[dependencies]
pdf-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "signal"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
indicatif = { workspace = true }
console = { workspace = true }
toml = { workspace = true }
dirs = "5"
mime_guess = "2"
futures = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
