[package]
name = "pdf-common"
version = "0.3.0"
edition = "2024"
description = "Minimal shared types and errors for pdf-module"
license = "MIT"

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
pdf-macros = { workspace = true }
serde_yaml = { workspace = true }
miette = { workspace = true, optional = true }
figment = { workspace = true, optional = true }
fluent = { workspace = true, optional = true }
unic-langid = { workspace = true, optional = true }
intl-memoizer = { workspace = true, optional = true }

[features]
default = []
diagnostics = ["miette"]
config-loader = ["figment"]
i18n = ["fluent", "unic-langid", "intl-memoizer"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
