[package]
name = "pdf-core"
version = "0.3.0"
edition = "2021"
description = "Pure PDF extraction pipe: pdfium engine, zero state, zero cache"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["knowledge", "vlm"]
knowledge = [
    "dep:tantivy",
    "dep:petgraph",
    "dep:jieba-rs",
    "dep:rs_merkle",
    "dep:bincode",
    "dep:sled",
    "dep:fnv",
    "dep:hex",
    "dep:sha2",
    "dep:regex",
    "dep:bumpalo",
]
vlm = ["dep:vlm-visual-gateway"]
dhat-heap = ["dhat"]

[dependencies]
# Always-required: core runtime and serialization
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
pdf-common = { workspace = true }
pdfium-render = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
infer = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = { workspace = true }
uuid = { version = "1", features = ["v4"] }

# Always-required: I/O and parallelism
memmap2 = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
crossbeam-deque = { workspace = true }
parking_lot = { workspace = true }

# Optional: VLM (Vision Language Model) enhancement
vlm-visual-gateway = { workspace = true, optional = true }

# Optional: Knowledge engine (indexes, graph, wiki compilation)
tantivy = { workspace = true, optional = true }
petgraph = { workspace = true, optional = true }
jieba-rs = { workspace = true, optional = true }
rs_merkle = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
sled = { workspace = true, optional = true }
fnv = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
bumpalo = { workspace = true, optional = true }

# Optional: profiling
dhat = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
insta = { version = "1", features = ["json", "yaml"] }
assert2 = "0.3"
rstest = "0.22"
pretty_assertions = "1"
cargo-husky = { workspace = true }
pprof = { workspace = true }

[[bench]]
name = "extractor_bench"
harness = false

[[bench]]
name = "validator_bench"
harness = false
