[package]
name = "pdf-frontend"
version = "0.4.0"
edition = "2021"
description = "Leptos + Tailwind CSS frontend for rsut-pdf-mcp knowledge base management"
license = "MIT"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"
leptos-use = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
web-sys = { version = "0.3", features = ["Window", "History", "Location", "console"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }