[package]
name = "pdf-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for the PDF module workspace"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
