[package]
name = "pdf-mcp-contracts"
version = "0.3.0"
edition = "2024"
description = "MCP tool input/output JSON Schema contracts for pdf-mcp"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
