[package]
name = "pdf-mcp"
version = "0.3.0"
edition = "2021"
description = "MCP stdio pipe for PDF extraction — pdfium only, zero state"
license = "MIT"

[[bin]]
name = "pdf-mcp"
path = "src/main.rs"

[dependencies]
pdf-core = { workspace = true }
vlm-visual-gateway = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
pulldown-cmark = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true, features = ["fs"] }
rust-embed = { workspace = true }
regex = "1"
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }
