[package]
name = "pdf-mcp"
version = "0.3.0"
edition = "2024"
description = "MCP stdio pipe for PDF extraction — pdfium only, zero state"
license = "MIT"

[[bin]]
name = "pdf-mcp"
path = "src/main.rs"

[lib]
name = "pdf_mcp"
path = "src/lib.rs"

[dependencies]
pdf-core = { workspace = true }
pdf-mcp-contracts = { workspace = true }
vlm-visual-gateway = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
async-stream = "0.3"
futures = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tower = "0.5"
rust-embed = { workspace = true }
regex = "1"
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }
prometheus = { workspace = true, features = ["process"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true }

# Update / version checking
ureq = { version = "2", features = ["json"] }
