[package]
name = "pdf-web"
version = "0.1.0"
edition = "2021"
description = "Deprecated management API sidecar — use pdf-mcp (HTTP + pdf-web-ui) instead"
license = "MIT"

[[bin]]
name = "pdf-web"
path = "src/main.rs"

[dependencies]
pdf-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
